ParcelablePost, Calendar and EventsPage integration, some other misc features

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,16 @@
         </activity>
 
         <activity
+            android:name=".EventsPageActivity"
+            android:exported="true">
+        </activity>
+
+        <activity
+            android:name=".NavigatorActivity"
+            android:exported="true">
+        </activity>
+
+        <activity
             android:name=".MainActivity"
             android:exported="true">
         </activity>
