--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         </activity>
 
         <activity
-            android:name=".ui.login.CreateNewAccountView"
+            android:name=".ui.login.CreateNewAccount"
             android:exported="true"
             android:label="CreateNewAccountView">
         </activity>
